Removed some issues found by sonarqube